Closed Bug 62818 Opened 25 years ago Closed 25 years ago

A crash occurs when trying to reply/quote a message

Categories

(MailNews Core :: Composition, defect, P3)

x86
All
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: momoi, Assigned: scc)

References

Details

(Keywords: crash, regression, smoketest)

** Observed with 12/13/2000 Win32 Mtrunk build ** This crash occurs regularly when I select a message and attempts to reply/w quote on that message with the above build. Composer window comes up and it tries to quote the original text but it then crashes before completing that process. There is a crash report on this and here are the lines: ------------------------- Call Stack: (Signature = nsSlidingSubstring::GetReadableFragment 26a8f03f) nsSlidingSubstring::GetReadableFragment [d:\builds\seamonkey\mozilla\xpcom\ds\nsSlidingString.cpp, line 231] nsReadingIterator<unsigned short>::normalize_forward [..\..\dist\include\nsAReadableString.h, line 468] basic_nsAReadableString<unsigned short>::BeginReading [..\..\dist\include\nsAReadableString.h, line 493] basic_nsAWritableString<unsigned short>::do_AssignFromReadable [..\..\dist\include\nsAWritableString.h, line 587] basic_nsAWritableString<unsigned short>::AssignFromPromise [..\..\..\dist\include\nsAWritableString.h, line 557] basic_nsAReadableString<unsigned short>::Mid [..\..\..\dist\include\nsAWritableString.h, line 852] nsPlainTextSerializer::Write [d:\builds\seamonkey\mozilla\layout\base\src\nsPlainTextSerializer.cpp, line 1320] nsPlainTextSerializer::DoAddLeaf [d:\builds\seamonkey\mozilla\layout\base\src\nsPlainTextSerializer.cpp, line 854] nsPlainTextSerializer::AddLeaf [d:\builds\seamonkey\mozilla\layout\base\src\nsPlainTextSerializer.cpp, line 359] CNavDTD::AddLeaf [d:\builds\seamonkey\mozilla\htmlparser\src\CNavDTD.cpp, line 3703] CNavDTD::HandleDefaultStartToken [d:\builds\seamonkey\mozilla\htmlparser\src\CNavDTD.cpp, line 1194] CNavDTD::HandleStartToken [d:\builds\seamonkey\mozilla\htmlparser\src\CNavDTD.cpp, line 1623] CNavDTD::HandleToken [d:\builds\seamonkey\mozilla\htmlparser\src\CNavDTD.cpp, line 755] CNavDTD::BuildModel [d:\builds\seamonkey\mozilla\htmlparser\src\CNavDTD.cpp, line 480] nsParser::BuildModel [d:\builds\seamonkey\mozilla\htmlparser\src\nsParser.cpp, line 2010] nsParser::ResumeParse [d:\builds\seamonkey\mozilla\htmlparser\src\nsParser.cpp, line 1889] nsParser::Parse [d:\builds\seamonkey\mozilla\htmlparser\src\nsParser.cpp, line 1704] ConvertBufToPlainText [d:\builds\seamonkey\mozilla\mailnews\compose\src\nsMsgCompUtils.cpp, line 2013] QuotingOutputStreamListener::ConvertToPlainText [d:\builds\seamonkey\mozilla\mailnews\compose\src\nsMsgCompose.cpp, line 1283] QuotingOutputStreamListener::OnStopRequest [d:\builds\seamonkey\mozilla\mailnews\compose\src\nsMsgCompose.cpp, line 1471] nsStreamConverter::OnStopRequest [d:\builds\seamonkey\mozilla\mailnews\mime\src\nsStreamConverter.cpp, line 979] nsImapCacheStreamListener::OnStopRequest [d:\builds\seamonkey\mozilla\mailnews\imap\src\nsImapProtocol.cpp, line 6676] AsyncReadStreamAdaptor::OnStopRequest [d:\builds\seamonkey\mozilla\netwerk\cache\memcache\nsMemCacheChannel.cpp, line 151] nsOnStopRequestEvent::HandleEvent [d:\builds\seamonkey\mozilla\netwerk\base\src\nsAsyncStreamListener.cpp, line 302] nsStreamListenerEvent::HandlePLEvent [d:\builds\seamonkey\mozilla\netwerk\base\src\nsAsyncStreamListener.cpp, line 101] PL_HandleEvent [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line 577] _md_EventReceiverProc [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line 1055] ------------------------- nsSlidingString.cpp was last modified by vidur and so CC'ing vidur@netscape.com.
Keywords: crash
Summary: A carsh occurs when trying to reply/quote a message → A crash occurs when trying to reply/quote a message
cc to harishd
Keywords: regression
Keywords: regression
*** Bug 62844 has been marked as a duplicate of this bug. ***
this sucks, beavis.
this is *so* a smoketest blocker, seeing it on linux, changing os, upgrading severity.
Severity: critical → blocker
OS: Windows NT → All
CCing scc & jst.
Accepting and looking at it...
Status: NEW → ASSIGNED
QA Contact: esther → sheelar
I crash in the same spot when copying certain text off of certain webpages.
scc has (will have soon) the fix for this problem. Reassign to him...
Assignee: ducarroz → scc
Status: ASSIGNED → NEW
I just checked in scc's fix for this, marking FIXED.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
*** Bug 62734 has been marked as a duplicate of this bug. ***
This is gone..builds on NT 2000121804, Mac 2000121808 and Linux 200012808.
Status: RESOLVED → VERIFIED
*** Bug 63166 has been marked as a duplicate of this bug. ***
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.