Checking in scc's fix for blocker bug 62818, nsSlidingSubstring::GetReadableFragment(..., kFragmentAt, ...) wasn't implemented and that caused a crash when serializing HTML to plain text. r=me.